Woo! Pretty good right now. Added fancy caption stuff, fixed nav bar in place, worked out some spacing stuff. Still need to add something (comment box? copyright?) to the bottom of the posts, and copy the website page into the template and all the project pages

--- a/index_beta.css
+++ b/index_beta.css
@@ -24,16 +24,20 @@ banner > i {
 }
 
 #bar_block {
-	background: #cccccc;
+	background: #ffffff;
 	width: 5%;
 	height: 240px;
 }
 
 bar {
+	width: 5%;
+	height: 98vh;
+	left: 8px;
+	top: 8px;
+
 	order: 2;
 	flex: 0 5%;
 	background: #cccccc;
-	height: 800px;
 }
 
 bar > div > a {
@@ -126,7 +130,7 @@ main {
 
 #project_item {
 	width: 45%;
-	height: 45%;
+	height: 46%;
 	margin: 1%;
 	font-size: 160%;
 
@@ -170,6 +174,7 @@ code {
 	display: none;
 	background: rgb(0,255,0,0);
 	width: 94%;
+	height: 100vh;
 	position: absolute;
 	z-index: 1;
 	left: 6%;
@@ -197,20 +202,19 @@ code {
 }
 
 img + #text {
-	visibility: hidden;
+	/*visibility: hidden;*/
 	position: fixed;
 	width: 93%;
 	margin-top: 0px;
 	margin-left: 0px;
-	top: 95vh;
+	bottom: -7vh;
 	left: 6%;
-	/*transition:all 0.5s ease-in-out;
-    margin-top: 17.6%;*/
+	transition:all 0.5s ease-in-out;
 }
 
 img:hover + #text {
 	visibility: visible;
-	/*transform: translateY(-100px);*/
+	bottom: 1.1vh;
 	margin-left: 0px;
 }
 
@@ -234,10 +238,6 @@ img:hover + #text {
 	bar {
 		font-size: 70%;
 	}
-
-	#project_item {
-		height: 34%;
-	}
 }
 
 
@@ -255,6 +255,8 @@ img:hover + #text {
 	}
 
 	bar {
+		position: static !important;
+		width: 70%;
 		background: #ffffff;
 	}
 
@@ -267,7 +269,7 @@ img:hover + #text {
 		padding: 2px;
 		padding-bottom: 11px;
 
-		margin-top: 20px;
+		margin-top: 20px !important;
 		width: 100%;
 	}
 
@@ -371,5 +373,13 @@ img:hover + #text {
 	#modal {
 		left: 21.5%;
 		top: 520px;
+	}
+
+	img + #text {
+		bottom: -15vh;
+	}
+
+	img:hover + #text {
+		bottom: 2vh;
 	}
 }
